# Gleam

./: CMakeLists.txt  CMakePresets.json  CopyResources.cmake  CreateProject.cmake  ProjectCreate.cmake  ProjectPack.cmake  ProjectPostProcess.cmake  README.md  build.bat  pack.bat  vcpkg.json
samples/: CMakeLists.txt
samples/HelloGleam/: CMakeLists.txt  __Init__.cpp  main.cpp
samples/HelloLight/: CMakeLists.txt  __Init__.cpp  main.cpp
samples/MassSpring/: Archetype.h  Archetype.hpp  AssetSystem.cpp  AssetSystem.h  CMakeLists.txt  Component.hpp  FixedPointSystem.cpp  FixedPointSystem.h  GameRenderingSystem.cpp  GameRenderingSystem.h  GameUISystem.cpp  GameUISystem.h  LineUpdateSystem.cpp  LineUpdateSystem.h  LogicSystem.cpp  LogicSystem.h  System.hpp  World.hpp  __Init__.cpp  main.cpp
samples/MassSpring/Assets/: VertexColor.hlsl
samples/MassSpring/Editor/: EditorUIUtility.cpp  EditorUIUtility.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h
samples/MassSpring/Physics/: CollisionSystem.h  ForceSystem.cpp  ForceSystem.h  PhysicsComponent.h  PhysicsComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.h  PositionSystem.cpp  PositionSystem.h
samples/MassSpring/Public/: Component.h  Component.hpp  PresentationSystem.cpp  PresentationSystem.h  SimulationSystem.cpp  SimulationSystem.h  UISystem.cpp  UISystem.h
samples/MassSpring/Rendering/: RenderingComponent.h  RenderingComponent.hpp  RenderingSystem.cpp  RenderingSystem.h
samples/MassSpring/Systems/: LogicSystem.cpp  LogicSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PresentationSystem.cpp  PresentationSystem.h  RenderingSystem.cpp  RenderingSystem.h  SimulationSystem.h  UISystem.cpp  UISystem.h
sources/: CMakeLists.txt
sources/Libraries/GleamECS/: CMakeLists.txt
sources/Libraries/GleamGL/: CMakeLists.txt  ReadMe.md
sources/Libraries/GleamGraphics/: CMakeLists.txt
sources/Libraries/GleamImport/: CMakeLists.txt
sources/Libraries/GleamMath/: CMakeLists.txt
sources/Libraries/GleamPersistence/: CMakeLists.txt
sources/Libraries/GleamReflection/: CMakeLists.txt  ReadMe.md
sources/Libraries/GleamUtility/: CMakeLists.txt  ReadMe.md
sources/Libraries/LightGL/: CMakeLists.txt
sources/Libraries/LightGraphics/: CMakeLists.txt  ReadMe.md
sources/Libraries/LightImport/: CMakeLists.txt
sources/Libraries/LightMath/: CMakeLists.txt  README.md
sources/Libraries/LightReflection/: CMakeLists.txt  ReadMe.md
sources/Libraries/LightUtility/: ReadMe.md
sources/LightECS/Runtime/: Archetype.h  Archetype.hpp  ArchetypeMeta.hpp  Component.h  Entity.hpp  EntitySet.cpp  EntitySet.h  Heap.cpp  Heap.h  Reference.hpp  System.cpp  System.h  System.hpp  View.hpp  World.cpp  World.h  _Concept.hpp  _Template.hpp
sources/LightECS/Tests/: CMakeLists.txt  Tests.cpp
sources/LightEngine/: CMakeLists.txt
sources/LightEngine/Editor/: CMakeLists.txt  GameWindow.h  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h
sources/LightEngine/Runtime/: CMakeLists.txt  Component.hpp  Engine.cpp  Engine.h  __Init__.h
sources/LightEngine/RuntimeTests/: CMakeLists.txt  ReflectionTests.cpp  Tests.cpp
sources/LightEngine/Tests/: ECSTests.cpp  Tests.cpp
sources/LightGL/: CMakeLists.txt  README.md
sources/LightGL/Runtime/: CMakeLists.txt  GL.cpp  GL.h
sources/LightGL/Tests/: CMakeLists.txt  GLTests.cpp  Tests.cpp
sources/LightGraphics/: CMakeLists.txt  README.md
sources/LightGraphics/Assets/: Graphics.hlsl  Graphics.hlsli
sources/LightGraphics/Runtime/: Assets.hpp  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Graphics.cpp  Graphics.h  GraphicsAssets.cpp  GraphicsAssets.h  GraphicsConfig.hpp  GraphicsPreset.cpp  GraphicsPreset.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Preset.hpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
sources/LightGraphics/Tests/: CMakeLists.txt  Tests.cpp
sources/LightImport/: CMakeLists.txt
sources/LightImport/Runtime/: CMakeLists.txt  ImageImport.cpp  ImageImport.h  ImageImporter.cpp  ImageImporter.h  ModelImport.cpp  ModelImport.h  ModelImporter.cpp  ModelImporter.h  ShaderImport.cpp  ShaderImport.h  ShaderImporter.cpp  ShaderImporter.h
sources/LightImport/Tests/: Tests.cpp
sources/LightMath/: CMakeLists.txt  README.md
sources/LightMath/Runtime/: Color.cpp  Color.h  EulerAngles.cpp  EulerAngles.h  EulerAngles.hpp  Graphics.cpp  Graphics.h  Math.cpp  Math.h  Math.hpp  Matrix.h  Matrix.hpp  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  MatrixMath.hpp  MatrixSwizzle.hpp  Matrix_Math.hpp  Vector.cpp  Vector.h  Vector.hpp  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VectorMath.hpp  VectorSwizzle.hpp
sources/LightMath/Tests/: Tests.cpp
sources/LightPresentation/Runtime/: CMakeLists.txt  PresentationSystem.cpp  PresentationSystem.h  __Init__.h  __Module__.h
sources/LightPresentation/Tests/: GLTests.cpp  GraphicsTests.cpp  Test.cpp
sources/LightReflection/: CMakeLists.txt
sources/LightReflection/Runtime/: CMakeLists.txt  Transmitter.cpp  Type.h  Type.hpp
sources/LightReflection/Tests/: Tests.cpp
sources/LightRendering/: CMakeLists.txt
sources/LightRendering/Runtime/: CMakeLists.txt  Material.h  Mesh.cpp  Mesh.h  PointsRenderer.h  Renderer.h  Renderer.hpp  Rendering.cpp  Rendering.h  RenderingSystem.cpp  RenderingSystem.h  Shader.cpp  Shader.h  __Init__.h
sources/LightRendering/Tests/: Tests.cpp
sources/LightUI/: CMakeLists.txt
sources/LightUI/Runtime/: CMakeLists.txt  UI.cpp  UI.h  UISystem.cpp  UISystem.h
sources/LightUI/Tests/: CMakeLists.txt  Tests.cpp
sources/LightUtility/: CMakeLists.txt
sources/LightUtility/Runtime/: CMakeLists.txt  Chronograph.cpp  Chronograph.h  ObjectPool.h  ObjectPool.hpp  ThreadPool.cpp  ThreadPool.h  Utility.hpp
sources/LightUtility/Tests/: CMakeLists.txt  ImportTests.cpp  Tests.cpp
sources/LightWindow/: CMakeLists.txt  README.md
sources/LightWindow/Runtime/: Init.cpp  (+9 more)
(+817 files in other folders)
